      \code{if(!is.null(L)) L else R} or \code{if(is.null(L)) R else L}
      phrases.

      \item \code{warnings()} now always inherits from \code{"warnings"} as
      documented, newly also in the case of no warnings, where it
      previously returned \code{NULL}.

      \item \code{as.complex("1i")} now returns \code{1i} instead of
      \code{NA} with a warning.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item System valgrind headers are required to use
      \command{configure} option \option{--with-valgrind-instrumentation}
      with value \code{1} or \code{2}.

      \item \command{configure} will warn if it encounters a 32-bit
      build, as that is nowadays almost untested.

      \item Environment variable \env{R_SYSTEM_ABI} is no longer used and
      so no longer recorded in \file{etc/Renviron} (it was not on Windows
      and was only ever used when preparing package \pkg{tools}).

      \item If the \code{libdeflate} library and headers are available,
      \code{libdeflate} rather than \code{libz} is used to (de)compress
      \R objects in lazy-load databases,  Typically tasks spend up to 5\% of
      their time on such operations, although creating lazy-data
      databases is one of the exceptions.

      This can be suppressed if the library is available by the
      \command{configure} option
      \option{--without-libdeflate-compression}.

      \item \command{configure} option \option{--enable-lto=check} has
      not worked reliably since 2019 and has been removed.
    }
  }

  \subsection{INSTALLATION on macOS}{
    \itemize{
      \item A new \command{configure} option \option{--with-newAccelerate}
      makes use of Apple's \sQuote{new} BLAS / LAPACK interfaces in their
      Accelerate framework.  Those interfaces are only available in macOS
      13.3 or later, and building requires SDK 13.3 or later (from the
      Command Line Tools or Xcode 14.3 or later).
