@@ -1,6 +1,6 @@
 % File src/library/base/man/c.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2022 R Core Team
+% Copyright 1995-2023 R Core Team
 % Distributed under GPL 2 or later
 \name{c}
 \title{Combine Values into a Vector or List}
@@ -37,7 +37,11 @@ c(\dots)
   are treated as one-element \code{\link{list}}s
   which cannot be unlisted even if \code{recursive = TRUE}.
 
-    There is a \code{\link{c.factor}} method which combines factors into
+  If the output type is \code{\link{complex}}, logical, integer, and double
+  \code{NA}s keep their imaginary parts zero when coerced, and hence will
+  \emph{not} become \code{NA_complex_} (with imaginary part \code{NA}).
+
+  There is a \code{\link{c.factor}} method which combines factors into
   a factor.
 
   \code{c} is sometimes used for its side effect of removing attributes
